style.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: "Poppins", sans-serif;
}

#preloader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #fff;
  /* change if the mask should have another color then white */
  z-index: 99999;
  /* makes sure it stays on top */
}

#status {
  width: 100px;
  height: 100px;
  position: absolute;
  left: 50%;
  /* centers the loading animation horizontally one the screen */
  top: 50%;
  /* centers the loading animation vertically one the screen */
  background-image: url("book.gif");
  z-index: 9999;
  /* path to your loading animation */
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin: -50px 0 0 -50px;
  /* is width and height divided by two */
}

.sec-padding {
  padding-bottom: 80px;
}

.img-fluid:hover {
  transform: scale(1.06);
  transition: 0.5s all ease-in-out;
  cursor: pointer;
}

.fixed-top {
  background: #f0fff0;
}

.nav-item {
  padding: 0px 5px;
}

.nav-btn {
  padding: 10px 28px !important;
  background-color: #21b573;
  color: #ffffff !important;
  border: none;
  border-radius: 33px;
}

.nav-btn {
  background-position: center;
  transition: background 0.8s;
}

.nav-btn:hover {
  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
    center/15000%;
}

.nav-link:hover {
  transform: scale(1.05);
  transition: 0.5s all ease-in-out;
  font-size: 17.5px;
}

/* Header section */

.header-section {
  height: 100vh;
  background-color: #f0fff0;
}

.header-details h6 {
  color: #fd511a;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 10px;
}

.header-details h1 {
  font-weight: bold;
  font-size: 48px;
  line-height: 70px;
  color: #000000;
  margin-bottom: 19px;
}

.header-details h1 span {
  color: #21b573;
}

.header-details p {
  font-size: 16px;
  line-height: 36px;
  color: #6c6b6b;
  margin-bottom: 15px;
}

.get-btn {
  padding: 12px 35px;
  background-color: #22c27a;
  color: #ffffff;
  border: none;
  border-radius: 33px;
  transition: all 0.3s;
}

.get-btn:hover {
  background-color: #2b9b6a;
  transform: scale(1.05);
  transition: 0.5s all ease-in-out;
}

.get-btn {
  background-position: center;
  transition: smooth background 0.6s;
}

.get-btn:hover {
  background: #2b9b6a radial-gradient(circle, transparent 1%, #2b9b6a 1%)
    center/15000%;
}

.get-btn:active {
  background-color: white;
  background-size: 100%;
  transition: background 0s;
  border: 0px;
}

/* DONATE BUTTONS */

.link {
  color: white;
  text-decoration: none;
}

.link:hover {
  color: #f5f5f5;
  text-decoration: none;
  font-size: 16px;
  font-weight: bold;
}

.gotopbtn:hover {
  background-color: #5bb18a;
}

/* Cards section */

.cards-section {
  margin-top: 40px;
}

.cards-inner {
  padding: 50px 0px;
  text-align: center;
  background: #f8fffb;
  border-radius: 10px;
  transition: all 0.4s;
}

.cards-inner:hover {
  background: #ffffff;
  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
}

.cards-inner img {
  width: 65px;
  height: 83px;
}

.cards-inner h5 {
  font-weight: 500;
  font-size: 24px;
  line-height: 36px;
  color: #413960;
  margin-top: 20px;
  margin-bottom: 0;
}

.cards-inner p {
  font-size: 16px;
  line-height: 24px;
  color: #585859;
  margin-bottom: 0;
}

/* course-section */

.title-text {
  font-size: 36px;
  line-height: 54px;
  color: #413960;
  font-weight: bold;
  margin-bottom: 60px;
}

.card {
  border: none;
  background: #ffffff;
  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
  border-radius: 18px;
}

.card:hover {
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
}

.card-img-top {
  padding: 20px;
  padding-bottom: 0;
}

.card-body h5 {
  font-weight: 500;
  font-size: 24px;
  line-height: 36px;
  color: #413960;
  margin-bottom: 3px;
}

.card-body p {
  font-size: 16px;
  line-height: 24px;
  color: #585859;
  margin-bottom: 19px;
}

.buy-btn {
  padding: 8px 27px;
  background-color: #21b573;
  color: #ffffff;
  border: none;
  border-radius: 33px;
  transition: all 0.3s;
}

.buy-btn:hover {
  background-color: #1d9660;
}

.buy-btn {
  background-position: center;
  transition: background 0.8s;
}

.buy-btn:hover {
  background: #1d9660 radial-gradient(circle, transparent 1%, #1d9660 1%)
    center/15000%;
}

.buy-btn:active {
  background-color: white;
  background-size: 100%;
  transition: background 0s;
}

.card-footer {
  background: #ffffff;
  border-top: 0px;
  border-radius: 18px !important;
  margin-bottom: 15px;
  width: 91%;
  margin-left: inherit;
}

.date img {
  width: 24px;
  height: 24px;
}

.date h6 {
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #585859;
  margin-left: 3px;
}

/* video area */

.video-section {
  background-color: #f0fff0;
  padding: 80px 0px;
  margin-bottom: 50px;
}

.video-details h2 {
  font-size: 36px;
  line-height: 54px;
  color: #413960;
}

.video-image img {
  border-radius: 20px;
}

.video-image {
  position: relative;
}

.video-icon {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background: #ffffff;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: grid;
  place-items: center;
  cursor: pointer;
}

/* subscribe area */

.subscribe-inner {
  background: #f0fff0;
  padding: 50px 0px;
  border-radius: 20px;
  margin-top: 30px;
  margin-bottom: 50px;
}

.subscribe-inner h2 {
  font-size: 36px;
  line-height: 54px;
  color: #413960;
  margin-bottom: 30px;
  font-weight: 600;
}

.subscribe-inner a {
  text-decoration: none;
  color: #ffffff;
}

/* Footer section */

.footer-section {
  padding-top: 25px;
  background: #282531;
  color: #ffffff;
}

.footer-section .container .row .col-lg-5 {
  padding-left: 30px;
}

.footer-section .container .row .col-lg-3 {
  padding-left: 30px;
}

.footer-section .container .row .col-lg-4 {
  padding-right: 40px;
}

.footer-section h3 {
  color: #27ae60;
  font-weight: bolder;
}

.footer-logo {
  text-align: center;
}
/* ... */

